--- a/package.json
+++ b/package.json
@@ -14,17 +14,23 @@
   "license": "MIT",
   "readmeFilename": "README.md",
   "devDependencies": {
+    "broccoli": "0.12.0",
+    "broccoli-cli": "0.0.1",
+    "broccoli-concat": "0.0.6",
+    "broccoli-es6-module-transpiler": "~0.1.0",
+    "broccoli-export-tree": "~0.3.0",
+    "broccoli-file-creator": "~0.1.0",
+    "broccoli-file-mover": "~0.2.0",
+    "broccoli-file-remover": "~0.2.0",
+    "broccoli-jshint": "~0.4.0",
+    "broccoli-kitchen-sink-helpers": "~0.2.0",
+    "broccoli-merge-trees": "0.1.3",
+    "broccoli-static-compiler": "0.1.4",
+    "broccoli-uglify-js": "~0.1.3",
     "grunt": "~0.4.2",
+    "grunt-broccoli": "~0.2.2",
     "grunt-cli": "~0.1.11",
     "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-connect": "~0.6.0",
-    "grunt-contrib-watch": "~0.5.3",
-    "grunt-contrib-qunit": "~0.3.0",
-    "grunt-es6-module-transpiler": "~0.6.0",
-    "grunt-concat-sourcemap": "~0.4.0",
-    "grunt-contrib-copy": "~0.5.0",
-    "grunt-contrib-uglify": "~0.2.7",
-    "grunt-contrib-jshint": "~0.8.0",
-    "connect-redirection": "0.0.1"
+    "grunt-contrib-qunit": "~0.4.0"
   }
 }
