--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "grunt-contrib-clean": "~0.5.0",
     "connect-redirection": "0.0.1",
     "grunt-contrib-qunit": "~0.4.0",
-    "grunt-broccoli": "~0.2.2"
+    "grunt-broccoli": "~0.2.2",
+    "broccoli-jshint": "~0.4.0"
   }
 }
